# 3D-mine-clearance

./: CMakeLists.txt  README.md  glad.c  main.cpp
